prevent content-flicker on initial screen before Timeline begins

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -5,7 +5,7 @@ html, body
   background-color black
 
 .text-container
-  opacity 1
+  opacity 0
   position absolute
   top 40%
   left 30%
